--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>My second github repo</title>
 </head>
 <body>
+    <h1>i can coding</h1>
+    <h2>i like to do coading
+        
+    </h2>
     
 </body>
+
 </html>
